[gd_scene load_steps=15 format=2]

[ext_resource path="res://objects/Sharp.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullets.sprites/bullets11.tres" type="Texture" id=2]
[ext_resource path="res://sprites/bullets.sprites/bullets12.tres" type="Texture" id=3]
[ext_resource path="res://sprites/bullets.sprites/bullets13.tres" type="Texture" id=4]
[ext_resource path="res://sprites/bullets.sprites/bullets14.tres" type="Texture" id=5]
[ext_resource path="res://sprites/bullets.sprites/bullets8.tres" type="Texture" id=6]
[ext_resource path="res://sprites/bullets.sprites/bullets9.tres" type="Texture" id=7]
[ext_resource path="res://sprites/bullets.sprites/bullets10.tres" type="Texture" id=8]
[ext_resource path="res://sprites/bullets.sprites/bullets4.tres" type="Texture" id=9]
[ext_resource path="res://sprites/bullets.sprites/bullets5.tres" type="Texture" id=10]
[ext_resource path="res://sprites/bullets.sprites/bullets6.tres" type="Texture" id=11]
[ext_resource path="res://sprites/bullets.sprites/bullets7.tres" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "flesh",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "glass",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "wood",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 2.0

[node name="Sharp" type="RigidBody2D" groups=[
"sharp",
]]

input_pickable = false
collision_layer = 8
collision_mask = 20
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.2
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "wood"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Lifetimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="sleeping_state_changed" from="." to="." method="_on_Sharp_sleeping_state_changed"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Lifetimer" to="." method="_on_Lifetimer_timeout"]


